--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -56,4 +56,13 @@ body {
     z-index: 10; /* Ensures it's above the stretched link */
 }
 
+#particles-js {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    top: 0;
+    left: 0;
+}
+
 
